# AI-Analytics-Agent-with-CREW-AI

./: README.md  pyproject.toml
ai_analytics_agent/src/ai_analytics_agent/: crew.py  main.py  models.py
ai_analytics_agent/src/ai_analytics_agent/config/: agents.yaml  tasks.yaml
ai_analytics_agent/src/ai_analytics_agent/tools/: sql_executor.py
output/: ai_analytics_report.md
scripts/: db_setup.py
scripts/sql/: analytics_orders.sql  product_english_name.sql
streamlit/: app.py
